--- a/frontend/app/templates/components/team-form.hbs
+++ b/frontend/app/templates/components/team-form.hbs
@@ -20,7 +20,7 @@
                   <label for="checkbox-private" name="private">{{t "teams.form.private"}}</label>
                 </div>
                 <div class="align-self-center mb-2 ml-2">
-                  <img src="/ember/assets/images/info.svg" alt="info" class="info-icon icon-button">
+                  <img src="/assets/images/info.svg" alt="info" class="info-icon icon-button">
                   <BsTooltip @title={{t "teams.description.private"}} />
                 </div>
                 <div class="align-self-center mb-2 ml-2">
