--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -4,22 +4,21 @@
 {{#if this.isFileEntryCreating}}
   <FileEntryForm @class="modal_file_entry" @account={{@account}} @title={{t "file_entries.new.title"}} @onAbort={{this.toggleFileEntryNew}}/>
 {{/if}}
-
 <div class="container px-5 pt-4 h-100 bg-white pl-none account-container-smartphone">
   <div class="row mb-3">
     <div class="col">
       <a id="account-show-back" role="button" {{on "click" this.transitionBack}}>
         <span class="btn btn-secondary edit_button" role="button">
-          <img class="icon-button account-show-back" src="/ember/assets/images/arrow-left.svg" alt="back">
+          <img class="icon-button account-show-back" src="/assets/images/arrow-left.svg" alt="back">
         </span>
       </a>
     </div>
     <div class="col-auto d-flex justify-content-between align-items-center">
       <DeleteWithConfirmation @class="btn btn-light edit_button" @record={{@account}} @didDelete={{this.refreshRoute}}>
-        <img class="icon-button d-inline" src="/ember/assets/images/delete.svg" alt="delete">
+        <img class="icon-button d-inline" src="/assets/images/delete.svg" alt="delete">
       </DeleteWithConfirmation>
       <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleAccountEdit}}>
-        <img class="icon-button" src="/ember/assets/images/edit.svg" alt="edit">
+        <img class="icon-button" src="/assets/images/edit.svg" alt="edit">
       </a>
     </div>
   </div>
@@ -40,14 +39,14 @@
     <div class="result-username">
       <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@account.cleartextUsername}}/>
       <CopyButton class="copy-btn btn btn-light" @clipboardText={{@account.cleartextUsername}}>
-        <img class="icon-clippy img d-inline" src="/ember/assets/images/clipboard.svg" alt="clip">
+        <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
       </CopyButton>
     </div>
     <a role="button" class="show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "accounts.show.show_password"}}</a>
     <div class="result-password">
       <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
       <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
-        <img class="icon-clippy img d-inline" src="/ember/assets/images/clipboard.svg" alt="clip">
+        <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
       </CopyButton>
     </div>
   </div>
