--- a/frontend/app/templates/components/file-entry-row.hbs
+++ b/frontend/app/templates/components/file-entry-row.hbs
@@ -3,7 +3,7 @@
   <td>{{@fileEntry.description}}</td>
   <td>
     <DeleteWithConfirmation @record={{@fileEntry}}>
-      <img class="icon-button d-inline" src="/ember/assets/images/delete.svg" alt="delete">
+      <img class="icon-button d-inline" src="/assets/images/delete.svg" alt="delete">
     </DeleteWithConfirmation>
   </td>
 </tr>
