--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -7,29 +7,29 @@
 <div class="pl-2 pr-2 folder-card-header {{if this.collapsed "br-4"}}">
   <div class="d-flex row justify-content-between folder-show-header">
     <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
-      <img class="icon icon-folder py-auto" src="/ember/assets/images/folder.svg" alt="">
+      <img class="icon icon-folder py-auto" src="/assets/images/folder.svg" alt="">
     </div>
     <div class="col pl-0 my-auto break-on-smartphone" role="button" {{on "click" this.collapse}}>
       <h6 class="d-inline">{{@folder.name}}</h6>
     </div>
     <div class="col-auto justify-content-between d-flex align-items-center align-right-on-smartphone">
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleAccountCreating}}>
-        <img class="icon-big-button " src="/ember/assets/images/plus.svg" alt="new">
+        <img class="icon-big-button " src="/assets/images/plus.svg" alt="new">
         <BsTooltip @title={{t "tooltips.add_account"}} @delayShow="1000" />
       </a>
       <DeleteWithConfirmation @class="mx-1" @record={{@folder}} @didDelete={{this.refreshRoute}}>
-        <img class="icon-big-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete folder">
+        <img class="icon-big-button d-inline my-auto" src="/assets/images/delete.svg" alt="delete folder">
         <BsTooltip @title={{t "tooltips.delete_folder"}} @delayShow="1000" />
       </DeleteWithConfirmation>
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleFolderEdit}}>
-        <img class="icon-big-button " src="/ember/assets/images/edit.svg" alt="edit folder">
+        <img class="icon-big-button " src="/assets/images/edit.svg" alt="edit folder">
         <BsTooltip @title={{t "folders.tooltips.edit"}} @delayShow="1000" />
       </a>
       <span role="button" name="folder-collapse" {{on "click" this.collapse}}>
         {{#if this.collapsed}}
-          <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
+          <img class="icon-big-button float-right" src="/assets/images/angle-left.svg" alt="<">
         {{else}}
-          <img class="icon-big-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
+          <img class="icon-big-button float-right" src="/assets/images/angle-down.svg" alt="v">
         {{/if}}
       </span>
     </div>
