--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -5,40 +5,38 @@
         <div class="d-flex justify-content-center list-group-top-button list-group-item-action border-0">
           <BsButtonGroup class="button-group" @type="radio" @value={{this.showsFavourites}} @onChange={{this.toggleFavourites}} as |bg|>
             <bg.button class="toggle-button" @value={{false}}>
-              <img class="icon icon-button" src="/ember/assets/images/members{{unless this.showsFavourites "-filled"}}.svg" alt="">
+              <img class="icon icon-button" src="/assets/images/members{{unless this.showsFavourites "-filled"}}.svg" alt="">
               <BsTooltip @title={{t "tooltips.all_teams"}} @delayShow="1000" />
             </bg.button>
             <bg.button class="toggle-button" @value={{true}}>
-              <img class="icon icon-button" src="/ember/assets/images/star{{if this.showsFavourites "-filled"}}.svg" alt="star">
+              <img class="icon icon-button" src="/assets/images/star{{if this.showsFavourites "-filled"}}.svg" alt="star">
               <BsTooltip @title={{t "tooltips.favorites"}} @delayShow="1000" />
             </bg.button>
           </BsButtonGroup>
         </div>
-
-
         <div class="mb-5 d-flex flex-column teams-list">
           <div class="side-nav-bar-teams-list scroll-bar">
             {{#if this.navService.availableTeams}}
               {{#each this.navService.sortedTeams as |team|}}
                 <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action team-list-item {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}} ">
                   {{#if team.private}}
-                    <img class="icon icon-button mr-2" src="/ember/assets/images/encrypted_small-blue.svg" alt="">
+                    <img class="icon icon-button mr-2" src="/assets/images/encrypted_small-blue.svg" alt="">
                   {{else}}
-                    <img class="icon icon-button mr-2" src="/ember/assets/images/members.svg" alt="">
+                    <img class="icon icon-button mr-2" src="/assets/images/members.svg" alt="">
                   {{/if}}
                   {{truncate team.name 18}}
                   {{#if (not team.folders)}}
                   {{else if (and team.folders (or (not (eq team this.navService.selectedTeam)) this.collapsed))}}
-                    <img class="icon icon-button-angle float-right" src="/ember/assets/images/angle-left.svg" alt="<">
+                    <img class="icon icon-button-angle float-right" src="/assets/images/angle-left.svg" alt="<">
                   {{else}}
-                    <img class="icon icon-button-angle float-right" src="/ember/assets/images/angle-down.svg" alt="v">
+                    <img class="icon icon-button-angle float-right" src="/assets/images/angle-down.svg" alt="v">
                   {{/if}}
                 </a>
                 {{#if team.folders}}
                   <BsCollapse class="list-group" id="nav-folders-{{team.id}}" @collapsed={{or (not (eq team this.navService.selectedTeam)) this.collapsed}}>
                     {{#each team.folders as |folder|}}
                       <a role="button"  class="list-group-item list-folder-item {{if (eq folder this.navService.selectedFolder) "bg-blue-three" "bg-blue-one"}}" {{on "click" (fn this.setSelectedFolder folder)}}>
-                        <img class="icon icon-button mr-1" src="/ember/assets/images/folder.svg" alt="">
+                        <img class="icon icon-button mr-1" src="/assets/images/folder.svg" alt="">
                         {{truncate folder.name 15}}
                       </a>
                     {{/each}}
