--- a/frontend/app/templates/components/team-member-configure.hbs
+++ b/frontend/app/templates/components/team-member-configure.hbs
@@ -22,11 +22,11 @@
                   <li>
                     {{member.label}}
                     {{#if member.admin}}
-                      <img class="float-right" src="/ember/assets/images/penguin.svg" alt="admin">
+                      <img class="float-right" src="/assets/images/penguin.svg" alt="admin">
                     {{else}}
                       {{#if member.deletable}}
                         <a class="float-right" role="button" {{on "click" (fn this.deleteMember member)}}>
-                          <img src="/ember/assets/images/remove.svg" alt="remove">
+                          <img src="/assets/images/remove.svg" alt="remove">
                         </a>
                       {{/if}}
                     {{/if}}
