--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -36,9 +36,9 @@
 
     <navbar.content @id="navbarSupportedContent">
       <navbar.nav @class="w-100">
-        <a href="/" class="show-not-on-hamburgermenu w-250">
+        <a href="/" class="title d-flex align-items-center show-not-on-hamburgermenu w-250">
           <img src="/assets/images/cryptopussy_without_text.svg" alt="logo" class="logo-icon">
-          <span class="ml-1 navbar-brand">Cryptopus</span>
+          <span class="ml-3 navbar-brand title">Cryptopus</span>
         </a>
         <div class="form-inline">
           <div class="form-group search-wrapper ">
