--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -223,7 +223,10 @@
 
 .title {
   color: white;
-  font-size: 1.75rem;
+  font-size: 1.5rem !important;
+  padding-bottom: 0 !important;
+  padding-top: 0 !important;
+  text-decoration: none !important;
 }
 .title:hover {
   text-decoration: none !important;
