Only show last login message when referring from login

--- a/app/views/session/local/new.html.haml
+++ b/app/views/session/local/new.html.haml
@@ -11,5 +11,5 @@
       = image_pack_tag "cryptopussy.svg", class: 'logo'
       .form-group
         = text_field_tag :username, params[:username], id: 'username', value: 'root', class: 'form-control', readonly: true
-        = password_field_tag :password, nil, id: 'password', placeholder: t(:password), class: 'form-control'
+        = password_field_tag :password, nil, id: 'password', placeholder: t(:password), class: 'form-control', autofocus: true
       = submit_tag t('.submit'), class: 'btn btn-primary'
