--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -6,10 +6,10 @@
 {{/if}}
 <div class="pl-2 pr-2 folder-card-header {{if this.collapsed "br-4"}}">
   <div class="d-flex row justify-content-between folder-show-header">
-    <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
+    <div class="col-auto pr-0 my-auto" role="button" {{on "click" this.collapse}}>
       <img class="icon icon-folder py-auto" src="/assets/images/folder.svg" alt="">
     </div>
-    <div class="col pl-0 my-auto break-on-smartphone" role="button" {{on "click" this.collapse}}>
+    <div class="col overflow-hidden my-auto break-on-smartphone" role="button" {{on "click" this.collapse}}>
       <h6 class="d-inline">{{@folder.name}}</h6>
     </div>
     <div class="col-auto justify-content-between d-flex align-items-center align-right-on-smartphone">
@@ -26,7 +26,7 @@
         <BsTooltip @title={{t "tooltips.delete_folder"}} @delayShow="1000" />
       </DeleteWithConfirmation>
     </div>
-    <div class="col-auto pl-0 justify-content-between d-flex align-items-center align-right-on-smartphone">
+    <div class="col-auto pl-0 justify-content-between d-flex align-items-center">
       <span role="button" name="folder-collapse" {{on "click" this.collapse}}>
         {{#if this.collapsed}}
           <img class="icon-big-button float-right" src="/assets/images/angle-left.svg" alt="<">
@@ -62,6 +62,5 @@
         {{/if}}
       </div>
     </div>
-
   </div>
 </BsCollapse>
