--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -10,18 +10,21 @@
 <BsNavbar
         @type="dark fixed-top"
         @backgroundColor="custom"
-        @collapsed={{this.isNavbarCollapsed}}
-        @onCollapse={{fn this.setNavbarCollapsed true}}
-        @onExpand={{fn this.setNavbarCollapsed false}}
-        @class="navbar-custom navbar-expand-lg" as |navbar|>
+        @class="navbar-custom navbar-expand-lg " as |navbar|>
   <div class="pl-0 pr-0 nav-container">
     <div class="navbar-header w-100 d-flex show-on-hamburgermenu">
       {{navbar.toggle}}
-      <a href="/" class="h3 title d-flex align-items-center">
+      <a href="/" class="col-auto title align-items-center pr-0 d-none d-sm-flex">
         <img src="/assets/images/cryptopussy_without_text.svg" alt="logo" class="logo-icon">
-        <span class="d-none d-sm-inline-block ml-1">Cryptopus</span>
       </a>
-      <div>
+      <div class="form-inline col pr-0">
+        <div class="form-group search-wrapper">
+          <Input @class="form-control mr-sm-2 search " @type="search" @id="search-mobile" @value={{ this.navService.searchQuery }}
+                 placeholder={{t "search.index.type_to_search"}} @keyUp={{this.searchByQuery}}
+                 @autofocus={{this.isStartpage}} maxlength="70"/>
+        </div>
+      </div>
+      <div class="col-auto">
         <a href="/profile">
           <span class="helper"></span><img class="icon-big-button icon mr-2 ml-1"
                                            src="/assets/images/settings_white.svg" alt="v">
@@ -41,19 +44,19 @@
           <span class="ml-3 navbar-brand title">Cryptopus</span>
         </a>
         <div class="form-inline">
-          <div class="form-group search-wrapper ">
+          <div class="form-group search-wrapper show-not-on-hamburgermenu">
             <Input @class="form-control mr-sm-2 search " @type="search" @id="search" @value={{ this.navService.searchQuery }}
                    placeholder={{t "search.index.type_to_search"}} @keyUp={{this.searchByQuery}}
                    @autofocus={{this.isStartpage}} maxlength="70"/>
           </div>
         </div>
-        <div class="ml-auto d-flex">
-          <BsDropdown @class="ml-auto d-flex align-items-center" as |dd|>
-            <div class="btn-group">
-              <a class="btn btn-primary" role="button" {{on "click" this.toggleAccountCreating}}>
+        <div class="ml-lg-auto d-flex">
+          <BsDropdown @class="d-flex align-items-center w-100 mt-5 mb-4 my-lg-0" as |dd|>
+            <div class="btn-group w-100">
+              <a class="btn btn-primary w-100" role="button" {{on "click" this.toggleAccountCreating}}>
                 {{t "accounts.new.title"}}
               </a>
-              <dd.toggle class="btn btn-primary dropdown-toggle-hided mr-3">
+              <dd.toggle class="btn btn-primary dropdown-toggle-hided mr-lg-3">
                 <span class="helper"></span><img class="icon-button" src="/assets/images/angle-down-white.svg"
                                                  alt="v">
               </dd.toggle>
@@ -85,8 +88,8 @@
             </a>
           </div>
         </div>
-        <div class="show-on-hamburgermenu">
-          <SideNavBar/>
+        <div class="show-on-hamburgermenu mb-5 my-lg-0">
+          <SideNavBar @navbar={{navbar}}/>
         </div>
       </navbar.nav>
     </navbar.content>
