--- a/app/assets/javascripts/templates/_api_user_row.hbs.erb
+++ b/app/assets/javascripts/templates/_api_user_row.hbs.erb
@@ -52,6 +52,7 @@
       <td>
         <a href='#'><img src=<%= image_path("refresh.svg") %> id='renew-user' class='icon action-icons'></a>
         <a href='#'><img src=<%= image_path("remove.svg") %> id='remove-user' class='icon action-icons'></a>
+        <a href='#'><img src=<%= image_path("clipboard.svg") %> id='clip-ccli-token' class='icon action-icons'></a>
       </td>
   </tr>
 {{/each}}
