--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -13,14 +13,16 @@
         </span>
       </a>
     </div>
-    <div class="col-auto d-flex justify-content-between align-items-center">
-      <DeleteWithConfirmation @class="btn btn-light edit_button" @record={{@account}} @didDelete={{this.refreshRoute}}>
-        <img class="icon-button d-inline" src="/assets/images/delete.svg" alt="delete">
-      </DeleteWithConfirmation>
-      <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleAccountEdit}}>
-        <img class="icon-button" src="/assets/images/edit.svg" alt="edit">
-      </a>
-    </div>
+    {{#unless @account.isOseSecret}}
+      <div class="col-auto d-flex justify-content-between align-items-center">
+        <DeleteWithConfirmation @class="btn btn-light edit_button" @record={{@account}} @didDelete={{this.refreshRoute}}>
+          <img class="icon-button d-inline" src="/assets/images/delete.svg" alt="delete">
+        </DeleteWithConfirmation>
+        <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleAccountEdit}}>
+          <img class="icon-button" src="/assets/images/edit.svg" alt="edit">
+        </a>
+      </div>
+    {{/unless}}
   </div>
   <div class="row pb-3 justify-content-between">
     <div class="col accountname">
