--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -49,7 +49,7 @@
 
     <div class="row">
       <div class="col">
-        {{#if @folder.accounts}}
+        {{#if this.shouldRenderAccounts}}
           {{#each @folder.accounts as |account|}}
             <div class="account-row px-3 py-1">
               <AccountRow @account={{account}}/>
