Fix hidden pw in account-show

--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -42,7 +42,7 @@
         <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
       </CopyButton>
     </div>
-    <a role="button" class="correct-pixel-error-omg show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "accounts.show.show_password"}}</a>
+    <a role="button" class="correct-pixel-error-omg show-text {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "accounts.show.show_password"}}</a>
     <div class="result-password">
       <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
       <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
