Include ose secrets per STI and implement an encrypted, serialized data field, refs: #55319

--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -38,19 +38,29 @@
     </div>
   {{/if}}
   <div>
-    <div class="result-username">
-      <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@account.cleartextUsername}}/>
-      <CopyButton class="copy-btn btn btn-light" @clipboardText={{@account.cleartextUsername}}>
-        <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-      </CopyButton>
-    </div>
-    <a role="button" class="correct-pixel-error-omg show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "accounts.show.show_password"}}</a>
-    <div class="result-password">
-      <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
-      <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
-        <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-      </CopyButton>
-    </div>
+    {{#if @account.isOseSecret}}
+      <a role="button" class="correct-pixel-error-omg show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "accounts.show.show_secret"}}</a>
+      <div class="result-password">
+        <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@account.data.ose_secret}}/>
+        <CopyButton class="btn btn-light" @clipboardText={{@account.data.ose_secret}}>
+          <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+        </CopyButton>
+      </div>
+    {{else}}
+      <div class="result-username">
+        <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@account.cleartextUsername}}/>
+        <CopyButton class="copy-btn btn btn-light" @clipboardText={{@account.cleartextUsername}}>
+          <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+        </CopyButton>
+      </div>
+      <a role="button" class="correct-pixel-error-omg show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "accounts.show.show_password"}}</a>
+      <div class="result-password">
+        <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
+        <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
+          <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+        </CopyButton>
+      </div> 
+    {{/if}}
   </div>
   <div class="d-flex flex-row justify-content-between mb-2">
     <div>
