Adjust icon for secret accounts

--- a/frontend/app/templates/components/account-row.hbs
+++ b/frontend/app/templates/components/account-row.hbs
@@ -4,7 +4,7 @@
 <div class="row d-flex align-items-center p-2 bg-grey-2 rounded account-entry">
   {{#if @account.isOseSecret}}
     <div class="col-auto pr-0 my-2">
-      <img class="img d-inline w-30 float-left icon-big-button" src="/assets/images/key.svg" alt="key">
+      <img class="img d-inline w-30 float-left icon-big-button" src="/assets/images/openshift-icon.png" alt="openshift-icon">
     </div>
     <div class="col-4 break-words">
       {{@account.accountname}}
