Adjust account secret label

--- a/frontend/app/templates/components/account-row.hbs
+++ b/frontend/app/templates/components/account-row.hbs
@@ -7,7 +7,7 @@
       <img class="img d-inline w-30 float-left icon-big-button" src="/assets/images/openshift-icon.png" alt="openshift-icon">
     </div>
     <div class="col-4 break-words">
-      {{@account.accountname}}
+      Openshift-Secret: {{@account.accountname}}
     </div>
     <div class="col"></div>
   {{else}}
