--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -1,15 +1,5 @@
--#  Copyright (c) 2008-2017, Puzzle ITC GmbH. This file is part of
--#  Cryptopus and licensed under the Affero General Public License version 3 or later.
--#  See the COPYING file at the top-level directory or at
--#  https://github.com/puzzle/cryptopus.
-
-
 !!!
-.login-form
-  = form_tag(session_path, class: 'login') do
-    %fieldset
-      = image_pack_tag "cryptopussy.svg", class: 'logo'
-      .form-group
-        = text_field_tag :username, params[:username], id: 'username', placeholder: t(:username), class: 'form-control'
-        = password_field_tag :password, nil, id: 'password', placeholder: t(:password), class: 'form-control'
-      = submit_tag t('.submit'), class: 'btn btn-primary'
+-if AuthConfig.oidc_enabled?
+  = render partial: 'oidc'
+-else
+  = render partial: 'user_password'
