--- a/app/views/session/_oidc.html.haml
+++ b/app/views/session/_oidc.html.haml
@@ -1,1 +1,5 @@
-= 'sleeeeeping'
+.login-form
+  = image_pack_tag "cryptopussy_oidc_sleep.svg", class: 'logo'
+  .form-group
+    I'm currently asleep to protect your precious data from session thieves. feel free to wake me up any time
+    = link_to('Wake me up', root_path, class: 'btn btn-primary')
