Stop jumping to top on showing password or username

--- a/frontend/app/templates/components/account-row.hbs
+++ b/frontend/app/templates/components/account-row.hbs
@@ -22,7 +22,7 @@
     <div class="col-2 pr-0 d-none d-md-block">
       <div class="hide-wrapper">
         <Input class="d-inline form-control" id="input-password-{{@account.id}}" @disabled="true" @value={{@account.cleartextUsername}}/>
-        <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isUsernameVisible "visibility-hidden"}}"{{on "click" this.showUsername}} href="#">{{t "accounts.show.show_username"}}</a>
+        <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isUsernameVisible "visibility-hidden"}}"{{on "click" this.showUsername}}>{{t "accounts.show.show_username"}}</a>
       </div>
     </div>
     <div class="col px-0 d-none d-md-block">
@@ -35,7 +35,7 @@
     <div class="col-2 pr-0 d-none d-md-block">
       <div class="hide-wrapper">
         <Input class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
-        <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPasswordVisible "visibility-hidden"}}"{{on "click" this.showPassword}} href="#">{{t "accounts.show.show_password"}}</a>
+        <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPasswordVisible "visibility-hidden"}}"{{on "click" this.showPassword}}>{{t "accounts.show.show_password"}}</a>
       </div>
     </div>
     <div class="col pl-0 d-none d-md-block">
