--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-- if current_user
+- if user_logged_in?
   %nav.navbar-custom.navbar.navbar-default.fixed-top.navbar-expand-lg
 
     .content
