--- a/app/views/session/totp/new.html.haml
+++ b/app/views/session/totp/new.html.haml
@@ -3,5 +3,5 @@
     %fieldset
       = image_pack_tag "cryptopussy.svg", class: 'logo'
       .form-group
-        = text_field_tag :totp_code, nil, id: 'totp_code', value: 'root', class: 'form-control', readonly: false
+        = text_field_tag :totp_code, nil, id: 'totp_code', class: 'form-control', readonly: false
       = submit_tag t('.submit'), class: 'btn btn-primary'
